--- a/charts/stable/meshcentral/questions.yaml
+++ b/charts/stable/meshcentral/questions.yaml
@@ -40,12 +40,14 @@ questions:
                 description: When true, indicates that a TLS offloader is in front of the MeshCentral server. More typically, set this to the IP address of the reverse proxy or TLS offloader so that IP forwarding headers will be trusted. For example traefik.ix-traefik.svc.cluster.local
                 schema:
                   type: string
+                  required: true
                   default: ""
               - variable: trustedProxy
                 label: trustedProxy
                 description: Trust forwarded headers from these IPs or domains. Providing the magic string "CloudFlare" will cause the server to download the IP address list of trusted CloudFlare proxies directly from CloudFlare on each server start. For example traefik.ix-traefik.svc.cluster.local
                 schema:
                   type: string
+                  required: true
                   default: ""
               - variable: WANonly
                 label: WANonly
