fix(sabnzbd): fix variable name for hostname whitelist

--- a/charts/stable/sabnzbd/questions.yaml
+++ b/charts/stable/sabnzbd/questions.yaml
@@ -15,7 +15,7 @@ questions:
       additional_attrs: true
       type: dict
       attrs:
-        - variable: HOST_WHITELIST_ENTRIES
+        - variable: SABNZBD__HOST_WHITELIST_ENTRIES
           label: "HostName Whitelist"
           description: "If you use a reverse proxy, you might need to enter your hostname's here (comma seperated)"
           schema:
