--- a/charts/stable/sabnzbd/values.yaml
+++ b/charts/stable/sabnzbd/values.yaml
@@ -4,7 +4,7 @@ image:
   tag: 3.7.1@sha256:ef28fdb2c4d8e44ab2964fde8821dabed6c90d2f2b41bab25a28cbfb01ca6261
 
 env:
-  HOST_WHITELIST_ENTRIES: ""
+  SABNZBD__HOST_WHITELIST_ENTRIES: ""
 
 service:
   main:
