--- a/charts/stable/home-assistant/values.yaml
+++ b/charts/stable/home-assistant/values.yaml
@@ -34,6 +34,9 @@ initContainers:
 # # When hostNetwork is true set dnsPolicy to ClusterFirstWithHostNet
 # dnsPolicy: ClusterFirstWithHostNet
 
+homeassistant:
+  trusted_proxies: []
+
 # Enable a prometheus-operator servicemonitor
 prometheus:
   serviceMonitor:
@@ -141,7 +144,9 @@ configmap:
             {{- if hasKey .Values "ixChartContext" }}
             - {{ .Values.ixChartContext.kubernetes_config.cluster_cidr }}
             {{- else }}
-            - 172.16.0.0/16
+              {{- range .Values.homeassistant.trusted_proxies }}
+            - {{ . }}
+              {{- end }}
             {{- end }}
 postgresql:
   enabled: true
