--- a/charts/stable/home-assistant/values.yaml
+++ b/charts/stable/home-assistant/values.yaml
@@ -34,6 +34,9 @@ initContainers:
 # # When hostNetwork is true set dnsPolicy to ClusterFirstWithHostNet
 # dnsPolicy: ClusterFirstWithHostNet
 
+homeassistant:
+  trusted_proxies: []
+
 # Enable a prometheus-operator servicemonitor
 prometheus:
   serviceMonitor:
@@ -138,8 +141,13 @@ configmap:
         http:
           use_x_forwarded_for: true
           trusted_proxies:
-            - 172.16.0.0/16
-
+            {{- if hasKey .Values "ixChartContext" }}
+            - {{ .Values.ixChartContext.kubernetes_config.cluster_cidr }}
+            {{- else }}
+              {{- range .Values.homeassistant.trusted_proxies }}
+            - {{ . }}
+              {{- end }}
+            {{- end }}
 postgresql:
   enabled: true
   postgresqlUsername: home-assistant
