Use http probe, as their healthcheck script is 💩. And has port hardcoded
Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/incubator/tileserver-gl/values.yaml
+++ b/charts/incubator/tileserver-gl/values.yaml
@@ -10,28 +10,13 @@ args:
 probes:
   liveness:
     enabled: true
-    custom: true
-    spec:
-      exec:
-        command:
-          - node
-          - /usr/src/app/src/healthcheck.js
+    path: /health
   readiness:
     enabled: true
-    custom: true
-    spec:
-      exec:
-        command:
-          - node
-          - /usr/src/app/src/healthcheck.js
+    path: /health
   startup:
     enabled: true
-    custom: true
-    spec:
-      exec:
-        command:
-          - node
-          - /usr/src/app/src/healthcheck.js
+    path: /health
 
 service:
   main:
