--- a/charts/incubator/soft-serve/templates/common.yaml
+++ b/charts/incubator/soft-serve/templates/common.yaml
@@ -2,7 +2,7 @@
 {{- include "tc.common.loader.init" . }}
 
 {{/* Render secret */}}
-{{- include "authentik.secret" . }}
+{{- include "softserve.secret" . }}
 
 {{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
