--- a/charts/incubator/pialert/values.yaml
+++ b/charts/incubator/pialert/values.yaml
@@ -13,7 +13,7 @@ podSecurityContext:
 
 env:
   HOST_USER_ID: "{{ .Values.podSecurityContext.runAsUser }}"
-  HOST_USER_GID: "{{ .Values.podSecurityContext.runAsGroup }}"
+  HOST_USER_GID: "{{ .Values.podSecurityContext.fsGroup }}"
   PORT: "{{ .Values.service.main.ports.main.port}}"
 
 service:
