--- a/charts/incubator/pialert/templates/common.yaml
+++ b/charts/incubator/pialert/templates/common.yaml
@@ -1,1 +1,7 @@
-{{ include "tc.common.loader.all" . }}
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{- include "pialert.secret" . -}}
+
+{{/* Render the templates */}}
+{{ include "tc.common.loader.apply" . }}
