--- a/charts/incubator/pialert/values.yaml
+++ b/charts/incubator/pialert/values.yaml
@@ -30,23 +30,31 @@ persistence:
   db:
     enabled: true
     mountPath: /home/pi/pialert/db
+  pialert-config:
+    enabled: true
+    mountPath: /home/pi/pialert/config/pialert.conf
+    type: secret
+    objectName: '{{ template "tc.common.names.fullname" . }}-secret'
+    items:
+      - key: pialert.conf
+        path: pialert.conf
 
-installContainers:
-  createdb:
-    image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-    volumeMounts:
-      - name: db
-        mountPath: /home/pi/pialert/db
-    command: ["/bin/sh", "-c"]
-    args:
-      - |-
-        echo "Creating pialert.db file..."
-        if [ -f /home/pi/pialert/db/pialert.db ]; then
-          echo "db file exists!, Skipping..."
-        else
-          echo "db file is missing, getting a new one!"
-          curl -fLvo /home/pi/pialert/db/pialert.db https://raw.githubusercontent.com/jokob-sk/Pi.Alert/main/db/pialert.db || ( echo "Downloading config file, FAILED..." && exit 1 )
-        fi
+# installContainers:
+#   createdb:
+#     image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+#     volumeMounts:
+#       - name: db
+#         mountPath: /home/pi/pialert/db
+#     command: ["/bin/sh", "-c"]
+#     args:
+#       - |-
+#         echo "Creating pialert.db file..."
+#         if [ -f /home/pi/pialert/db/pialert.db ]; then
+#           echo "db file exists!, Skipping..."
+#         else
+#           echo "db file is missing, getting a new one!"
+#           curl -fLvo /home/pi/pialert/db/pialert.db https://raw.githubusercontent.com/jokob-sk/Pi.Alert/main/db/pialert.db || ( echo "Downloading config file, FAILED..." && exit 1 )
+#         fi
 
 portal:
   enabled: true
