--- a/charts/stable/alist/values.yaml
+++ b/charts/stable/alist/values.yaml
@@ -3,6 +3,14 @@ image:
   pullPolicy: IfNotPresent
   tag: 3.7.2@sha256:80111a5c407d2c72054d732dd3ee77d109aba1c4ef3eefa3a0655d5597b86603
 
+securityContext:
+  readOnlyRootFilesystem: false
+  runAsNonRoot: false
+
+podSecurityContext:
+  runAsUser: 0
+  runAsGroup: 0
+
 service:
   main:
     ports:
