--- a/charts/incubator/pialert/values.yaml
+++ b/charts/incubator/pialert/values.yaml
@@ -104,21 +104,27 @@ persistence:
     mountPath: /home/pi/pialert/db
   pialert-config:
     enabled: true
-    mountPath: /home/pi/pialert/config/pialert.conf
+    mountPath: /home/pi/pialert/config/tc-pialert.conf
     type: secret
     objectName: '{{ template "tc.common.names.fullname" . }}-secret'
     subPath: pialert.conf
 
 initContainers:
-  dark-mode:
+  init:
     image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
     volumeMounts:
       - name: db
         mountPath: /home/pi/pialert/db
+      - name: config
+        mountPath: /home/pi/pialert/config
     command: ["/bin/sh", "-c"]
     args:
       - |
         dark_file="/home/pi/pialert/db/setting_darkmode"
+        temp_config_file="/home/pi/pialert/config/tc-pialert.conf"
+        config_file="/home/pi/pialert/config/pialert.conf"
+        echo "Copying config file into it's directory.."
+        cp -f "$temp_config_file" "$config_file" && echo "Copied config file successfully!" || echo "Failed to copy config file..."
         {{- if .Values.pialert.general.dark_mode }}
         echo "Enabling dark mode file...""
         touch "$dark_file" && echo "Created dark mode file! || echo "Failed to create dark mode file..."
